samples/_failures_safe/1761153639_02f729_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e70bc55b.c: In function ‘main’:
./samples/SAFE/__tmp_e70bc55b.c:138:12: error: missing terminating " character
  138 |     printf("
      |            ^
./samples/SAFE/__tmp_e70bc55b.c:138:5: error: expected expression at end of input
  138 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_e70bc55b.c:138:5: error: expected declaration or statement at end of input
